(JEdq8q7Y/84) fix css
! blocking input selection by its label
! match button of from one along to other with a gap
! overlap the list over the calendary field on main page on large screen
! logotype on main page

--- a/app/webpack/css/components/admin.scss
+++ b/app/webpack/css/components/admin.scss
@@ -1,13 +1,4 @@
 html {
-   header {
-      .nav-wrapper {
-         &.admin {
-            //TODO fix it for admin page on how to apply 'flex' display
-            display: inline;
-         }
-      }
-   }
-
    main {
       & > .container {
          &.admin {
